// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/metadata/pkg/pb/types;pbtypes";

// ----------------------------------------------------------------------------
// SubTask message
// https://github.com/openpitrix/openpitrix/issues/123#issuecomment-359673989
// ----------------------------------------------------------------------------

message SubTaskId {
	string task_id = 1;
}

message SubTaskMessage {
	string action = 1;
	string task_id = 2;
	string directive = 3; // json string
}

message SubTaskStatus {
	string task_id = 1;
	string status = 2;
}

enum SubTaskAction {
	NULL               = 0;
	StartConfd         = 1;
	RegisterMetadata   = 2;
	DeregisterMetadata = 3;
	RegisterCmd        = 4;
	DeregisterCmd      = 5;
	GetTaskStatus      = 6;
	StopConfd          = 7;
}

// ----------------------------------------------------------------------------
// StartConfd
// ----------------------------------------------------------------------------

/*
{
	"action": "StartConfd",
	"taskId": "t-abcdefgh",
	"directive": {"frontgateId": "cl-abcdefgh", "droneIp": "192.168.0.1", "timeout": 600}
}
*/
message SubTask_StartConfd {
	string action = 1;
	string task_id = 2;

	string frontgate_id = 3;
	string drone_ip = 4;
	int32 timeout = 5; // seconds
}

// ----------------------------------------------------------------------------
// StopConfd
// ----------------------------------------------------------------------------

/*
{
	"action": "StopConfd",
	"taskId": "t-abcdefgh",
	"directive": {"frontgateId": "cl-abcdefgh", "droneIp": "192.168.0.1", "timeout": 600}
}
*/
message SubTask_StopConfd {
	string action = 1;
	string task_id = 2;

	string frontgate_id = 3;
	string drone_ip = 4;
	int32 timeout = 5; // seconds
}

// ----------------------------------------------------------------------------
// RegisterMetadata/DeregisterMetadata
// ----------------------------------------------------------------------------

/*
{
	"action": "RegisterMetadata",
	"taskId": "t-abcdefgh",
	"directive": {"frontgateId": "cl-abcdefgh", "cnodes": "{\"key\", \"value\"}", "timeout": 600, "retry": 5}
}
*/
message SubTask_RegisterMetadata {
	string action = 1;
	string task_id = 2;

	string frontgate_id = 3;
	string cnodes = 4; // json map encoded string
	int32 timeout = 5; // seconds
	int32 retry = 6;
}

/*
{
	"action": "DeregisterMetadata",
	"taskId": "t-abcdefgh",
	"directive": {"frontgateId": "cl-abcdefgh", "droneIp": "192.168.0.1", cnodes": "{\"key\", \"value\"}", "timeout": 600, "retry": 5}
}
*/
message SubTask_DeregisterMetadata {
	string action = 1;
	string task_id = 2;

	string frontgate_id = 3;
	string drone_ip = 4;
	string cnodes = 5; // json map encoded string
	int32 timeout = 6; // seconds
	int32 retry = 7;
}

// ----------------------------------------------------------------------------
// RegisterCmd/DeregisterCmd
// ----------------------------------------------------------------------------

/*
{
	"action": "RegisterCmd",
	"taskId": "t-abcdefgh",
	"directive": {"frontgateId": "cl-abcdefgh", "droneIp": "192.168.0.1", cnodes": "{\"key\", \"value\"}", "timeout": 600, "retry": 5}
}
*/
message SubTask_RegisterCmd {
	string action = 1;
	string task_id = 2;

	string frontgate_id = 3;
	string drone_ip = 4;
	string cnodes = 5; // json map encoded string
	int32 timeout = 6; // seconds
	int32 retry = 7;
}

/*
{
	"action": "DeregisterCmd",
	"taskId": "t-abcdefgh",
	"directive": {"frontgateId": "cl-abcdefgh", "droneIp": "192.168.0.1", cnodes": "{\"key\", \"value\"}", "timeout": 600, "retry": 5}
}
*/
message SubTask_DeregisterCmd {
	string action = 1;
	string task_id = 2;

	string frontgate_id = 3;
	string drone_ip = 4;
	string cnodes = 5; // json map encoded string
	int32 timeout = 6; // seconds
	int32 retry = 7;
}

// ----------------------------------------------------------------------------
// GetTaskStatus
// ----------------------------------------------------------------------------

/*
{
	"action": "GetTaskStatus",
	"taskId": "t-abcdefgh"
}
*/
message SubTask_GetTaskStatus {
	string action = 1;
	string task_id = 2;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
