// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.pilot;

option go_package = "openpitrix.io/metadata/pkg/pb/pilot;pbpilot";

import "metadata/types/types.proto";
import "metadata/types/confd.proto";
import "metadata/types/drone.proto";
import "metadata/types/frontgate.proto";
import "metadata/types/pilot.proto";
import "metadata/types/task.proto";

service PilotService {
	rpc GetPilotVersion (metadata.types.Empty) returns (metadata.types.Version);
	rpc GetFrontgateVersion (metadata.types.FrontgateId) returns (metadata.types.Version);
	rpc GetDroneVersion (metadata.types.DroneEndpoint) returns (metadata.types.Version);

	rpc GetPilotConfig (metadata.types.Empty) returns (metadata.types.PilotConfig);
	rpc GetPilotClientTLSConfig (metadata.types.Empty) returns (metadata.types.PilotClientTLSConfig);

	rpc GetFrontgateList (metadata.types.Empty) returns (metadata.types.FrontgateIdList);
	rpc GetFrontgateConfig (metadata.types.FrontgateId) returns (metadata.types.FrontgateConfig);
	rpc SetFrontgateConfig (metadata.types.FrontgateConfig) returns (metadata.types.Empty);

	rpc GetDroneConfig (metadata.types.DroneEndpoint) returns (metadata.types.DroneConfig);
	rpc SetDroneConfig (metadata.types.SetDroneConfigRequest) returns (metadata.types.Empty);

	rpc GetConfdConfig (metadata.types.ConfdEndpoint) returns (metadata.types.ConfdConfig);

	rpc IsConfdRunning (metadata.types.DroneEndpoint) returns (metadata.types.Bool);
	rpc StartConfd (metadata.types.DroneEndpoint) returns (metadata.types.Empty);
	rpc StopConfd (metadata.types.DroneEndpoint) returns (metadata.types.Empty);

	rpc RegisterMetadata (metadata.types.SubTask_RegisterMetadata) returns (metadata.types.Empty);
	rpc DeregisterMetadata (metadata.types.SubTask_DeregisterMetadata) returns (metadata.types.Empty);

	rpc RegisterCmd (metadata.types.SubTask_RegisterCmd) returns (metadata.types.Empty);
	rpc DeregisterCmd (metadata.types.SubTask_DeregisterCmd) returns (metadata.types.Empty);

	rpc GetSubtaskStatus (metadata.types.SubTaskId) returns (metadata.types.SubTaskStatus);
	rpc HandleSubtask (metadata.types.SubTaskMessage) returns (metadata.types.Empty);

	rpc PingPilot (metadata.types.Empty) returns (metadata.types.Empty);
	rpc PingFrontgate (metadata.types.FrontgateId) returns (metadata.types.Empty);
	rpc PingFrontgateNode (metadata.types.FrontgateNodeId) returns (metadata.types.Empty);
	rpc PingDrone (metadata.types.DroneEndpoint) returns (metadata.types.Empty);
	rpc PingMetadataBackend (metadata.types.FrontgateId) returns (metadata.types.Empty);

	rpc RunCommandOnFrontgateNode (metadata.types.RunCommandOnFrontgateRequest) returns (metadata.types.String);
	rpc RunCommandOnDrone (metadata.types.RunCommandOnDroneRequest) returns (metadata.types.String);
}

service PilotServiceForFrontgate {
	rpc GetPilotVersion (metadata.types.Empty) returns (metadata.types.Version);
	rpc GetFrontgateVersion (metadata.types.FrontgateId) returns (metadata.types.Version);
	rpc GetDroneVersion (metadata.types.DroneEndpoint) returns (metadata.types.Version);

	rpc PingPilot (metadata.types.Empty) returns (metadata.types.Empty);
	rpc GetPilotConfig (metadata.types.Empty) returns (metadata.types.PilotConfig);
	rpc ReportSubTaskStatus (metadata.types.SubTaskStatus) returns (metadata.types.Empty);
	rpc FrontgateChannel (stream metadata.types.Bytes) returns (stream metadata.types.Bytes);
}
